tests/errors/test_72.x
fn main() -> void {

	let x: ();

}
